uploaded new cv.html

--- a/cv.html
+++ b/cv.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Depuydt</span>
                     </h1>
                     <div class="subheading mb-5"> 
-                        +1 (222) 222 2222 · 
+                        +1 (718) 401 2001 · 
                         <a href="mailto:jenny.thinkful@example.com">justindaledep@gmail.com</a> ·
                         San Diego, CA
                     </div>
@@ -53,7 +53,7 @@
                         <a class="cv-social-icon" href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                     <br>
-                    <p class="lead mb-5">Bacon ipsum dolor amet biltong tongue porchetta leberkas shank short loin chicken pastrami. Beef salami fatback strip steak jowl hamburger sausage cupim meatloaf. Tail beef ground round ham, doner porchetta tri-tip turducken.</p>
+                    <p class="lead mb-5">Experienced Director Of Business Development and Project Manager with a demonstrated history of working in the International Education industry. Skilled in Project Management, Team Building, Public Speaking, Leadership, Operations and Sales and Marketing. Strong business development professional with a passion for building strong relationships with partners and stakeholders to deliver excellence and superior outcomes.</p>
 
                 </div>
             </section>
@@ -64,28 +64,38 @@
                     <h2 class="cv-titles mb-5 mt-0">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1 mb-0">
-                            <h3 class="cv-titles mb-0 mt-0">Project Manager</h3>
-                            <div class="subheading mb-3"><img src="./assets/img/companies/amazon.png" width="40px" class= "border"> · Amazon · Seattle, WA</div>
-                            <p>Bacon ipsum dolor amet biltong tongue porchetta leberkas shank short loin chicken pastrami. Beef salami fatback strip steak jowl hamburger sausage cupim meatloaf. Tail beef ground round ham, doner porchetta tri-tip turducken. Tri-tip spare ribs capicola, short loin cow picanha andouille cupim frankfurter.</p>
+                            <h3 class="cv-titles mb-0 mt-0">Admissions Representative</h3>
+                            <div class="subheading mb-3"><img src="./assets/img/companies/thinkfulex.png" width="40px" class= "border"> · Chegg/Thinkful · Santa Clara, CA (remote)</div>
+                            <p>Counsel prospective students undergoing Thinkful's admissions process, educating them on how Thinkful's courses help them achieve their career goals and helping them find the most appropriate program. Communicate the unique benefits of Thinkful, help students explore the best options, and navigate student objections and roadblocks within the admissions process. Ensure a smooth transition throughout enrollment and into the first week of the program.
+- Consistently met student expectations through clear communication and follow-up.
+- Consistently achieved enrollment goals, enrolling nearly 100 students in 1 year.
+- Implemented procedural changes for the Admissions team as part of the change council </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2018 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2020 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1 mb-0">
-                            <h3 class="cv-titles mb-0 mt-0">Project Coordinator</h3>
-                            <div class="subheading mb-3"><img src="./assets/img/companies/beta.png" width="40px" class= "border"> · Beta Media · Austin, TX</div>
-                            <p>Bacon ipsum dolor amet biltong tongue porchetta leberkas shank short loin chicken pastrami. Beef salami fatback strip steak jowl hamburger sausage cupim meatloaf. Tail beef ground round ham, doner porchetta tri-tip turducken. Tri-tip spare ribs capicola, short loin cow picanha andouille cupim frankfurter.</p>
+                            <h3 class="cv-titles mb-0 mt-0">Partnerships Manager</h3>
+                            <div class="subheading mb-3"><img src="./assets/img/companies/shorelight.png" width="40px" class= "border"> · Shorelight · Boston, MA (remote)</div>
+                            <p>Created and executed student recruitment strategies through the development and management of a B2B network, including high schools, agencies, and other associated businesses. Built and managed key accounts to achieve enrollment targets for 15+ university partnerships. Established rapport and build strong relationships with prospective students, families, faculty, and staff. Leveraged technology to support a data-driven approach to recruitment. Worked across Shorelight teams to ensure smooth student entry into the school or program.
+- Consistently achieved enrollment goals
+- Established new sales territory from 0 to over 20 returning client accounts in 1.5 years
+- Oversaw junior sales staff in the Los Angeles market</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2016 - 2018</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2018 - 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1 mb-0">
-                            <h3 class="cv-titles mb-0 mt-0">Business Analyst</h3>
-                            <div class="subheading mb-0"><img src="./assets/img/companies/blomberg.png" width="40px" class= "border"> · Blomberg · Remote</div>
+                            <h3 class="cv-titles mb-0 mt-0">Business Development Director</h3>
+                            <div class="subheading mb-0"><img src="./assets/img/companies/oxford.png" width="40px" class= "border"> · Oxford International Educatoin Group · San Diego, CA</div>
 
-                            <p>Bacon ipsum dolor amet biltong tongue porchetta leberkas shank short loin chicken pastrami. Beef salami fatback strip steak jowl hamburger sausage cupim meatloaf. Tail beef ground round ham, doner porchetta tri-tip turducken. Tri-tip spare ribs capicola, short loin cow picanha andouille cupim frankfurter.</p>
+                            <p>Created and implemented new business growth strategies for the US-based division of Oxford International, including the development of in-person programs at multiple sites. Established and developed relationships with local partners and clients to meet ours and our partners' business goals. Worked across teams within the organization, including holding seminars with sales staff and company leaders in multiple countries to ensure team alignment and optimize outcomes.
+
+- Oversaw expansion of new educational center from zero revenue to over 1 million
+- Successfully launched new programs to improve revenue streams
+- Managed multiple stakeholders including sales staff and the corporate board</p>
                             </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2015</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2015 - 2018</span></div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -95,11 +105,17 @@
                     <h2 class="cv-titles mb-5 mt-0">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="cv-titles mb-0 mt-0"><img src="./assets/img/schools/ut-austin.png" width="40px" class= "border"> · The University of Texas at Austin</h3>
-                            <div class="subheading mb-3">Bachelor of Arts (B.A.) | Spanish Language and Literature</div>
-                            <p>Bridging Disciplines Program: Film Studies</p>
+                            <h3 class="cv-titles mb-0 mt-0"><img src="./assets/img/schools/uncw.png" width="40px" class= "border"> · The University of North Carolina at Wilmington</h3>
+                            <div class="subheading mb-3">Bachelor of Arts (B.A.) | Music</div>
+                            <p>Summa Cum Laude</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2007 - 2011</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="cv-titles mb-0 mt-0"><img src="./assets/img/schools/thinkful.png" width="40px" class= "border"> · Thinkful</h3>
+                            <div class="subheading mb-3">Technical Project Management</div>
+                            <p>Certificate</p>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -108,21 +124,39 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="cv-titles mb-5 mt-0">Skills</h2>
-                    <div class="subheading mb-3">Spoken & Written Languages</div>
+                    <div class="subheading mb-3">Soft Skills</div>
                     <ul class="mb-0">
-                        <li>English - Native Fluency</li>
-                        <li>French - Native Fluency</li>
+                        <li>Relationship Buidling</li>
+                        <li>Conflict Resolution</li>
+                        <li>Stakeholder Management</li>
+                        <li>Leadership</li>
+                        <li>Facilitating</li>
+                        <li>Writing</li>
+                        <li>Presenting</li>
+                        <li>Effective Communication</li>
                     </ul>
                     <br><br>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons mt-0 mb-3">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-bootstrap"></i></li>
-                    </ul>
-                    <ul class="list-inline dev-icons mt-0 mb-3">
-                        <li class="list-inline-item"><i class="fab fa-github"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-google"></i></li>
+                    <div class="subheading mb-3">Hard Skills</div>
+                    <ul class="mb-0">
+                        <li>Project Management</li>
+                        <li>Budgeting</li>
+                        <li>Earned Value Management</li>
+                        <li>Resource Management</li>
+                        <li>Planning</li>
+                        <li>Scheduling</li>
+                        <li>Contract Negotiation</li>
+                        <li>Hiring</li>
+                        <li>Employee Training</li>
+                        <li>Microsoft Office</li>
+                        <li>Windows/Mac Platforms</li>
+                        <li>Trello</li>
+                        <li>Slack</li>
+                        <li>Adobe</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+
+               
+                        
                     </ul>
                 </div>
             </section>
@@ -132,17 +166,19 @@
                 <div class="resume-section-content">
                     <h2 class="cv-titles mb-5 mt-0">Recommendations</h2>
                     <ul class="fa-ul mb-0">
-                        <div class="subheading mb-3"><img src="./assets/img/recs/john-smith.jpg" width="75px" class= "border"> · <a href="https://www.linkedin.com/" target="_blank">John Smith</a></div>
-                        <p><b>Head of Marketing</b></p>
+                        <div class="subheading mb-3"><img src="./assets/img/recs/zara.jpeg" width="75px" class= "border"> · <a href="https://www.linkedin.com/" target="_blank">Zara Fuerstein</a></div>
+                        <p><b>Sales Manager - Oxford International Education Group</b></p>
                         <li>
-                            <p>Bacon ipsum dolor amet biltong tongue porchetta leberkas shank short loin chicken pastrami. Beef salami fatback strip steak jowl hamburger sausage cupim meatloaf. Tail beef ground round ham, doner porchetta tri-tip turducken. Tri-tip spare ribs capicola, short loin cow picanha andouille cupim frankfurter.</p>
+                            <p> was working with Justin for over two years at Oxford International Education Group. I was doing student recruitment at that time.
+Justin developed our North American language business with a focus on summer programs. Specifically due to Justin, we had returning groups, leaders and individual students.
+Summer programs are full of challenges, and Justin always handled them with grace, skill, care and humor. I know people talk about work/life balance, but when it comes to language programs during peak season, Justin was willing to do whatever it took to resolve the situation and make our clients super happy, which was incredibly helpful and made recruitment job much easier.</p>
                         </li>
                     </ul>
                     <ul class="fa-ul mb-0">
-                        <div class="subheading mb-3"> <img src="./assets/img/recs/lee-parker.jpg" width="75px" class= "border"> · <a href="https://www.linkedin.com/" target="_blank">Lee Parker</a></div>
-                        <p><b>Senior Project Manager</b></p>
+                        <div class="subheading mb-3"> <img src="./assets/img/recs/cj.jpeg" width="75px" class= "border"> · <a href="https://www.linkedin.com/" target="_blank">Christopher Jack</a></div>
+                        <p><b>Assistant Director of Admissions - Coding Dojo</b></p>
                         <li>
-                            <p>Bacon ipsum dolor amet biltong tongue porchetta leberkas shank short loin chicken pastrami. Beef salami fatback strip steak jowl hamburger sausage cupim meatloaf. Tail beef ground round ham, doner porchetta tri-tip turducken. Tri-tip spare ribs capicola, short loin cow picanha andouille cupim frankfurter.</p>
+                            <p>Justin is one of the most gifted communicators I've ever worked with. Full stop. We worked together at Shorelight Education, and he was able to build client relationships in one of the most challenging international ed. markets in the country (Southern California). He would be a welcome addition to any team.</p>
                         </li>
                     </ul>
                 </div>
