Added all capstone project links

--- a/index.html
+++ b/index.html
@@ -174,18 +174,15 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Project Management Plan</h2>
-                                    <p class="item-intro text-muted">A project management plan for a (fictional) website development project</p>
+                                    <h2 class="text-uppercase">Capstone Project</h2>
+                                    <p class="item-intro text-muted">To complete the coursework in the Technical Project Management program, I created a Project Management Plan and attendant documents, calculations and presentations, based on a hypothetical business case for a web development proejct. This 'capstone' project was divided into 3 sections (as below), encompassing, process, communication, and technical skills</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/thinkfulport.png" alt="" />
-                                    <p>In this capstone, I created a project management plan for a (fictional) website development project.  Also included in this capstone are EVM calcualations for the project after one phase, and preparation materials for a project update meeting.</p>
-                                    <ul class="list-inline">
-                                        <li>Date: October, 2021</li>
-                                        <li>Link: <a href="https://docs.google.com/document/d/1NR4JXSZGm3j4QWK501OecwwJsbU7ymRG/edit?usp=sharing&ouid=109563213652036995908&rtpof=true&sd=true">Project Management Plan</a></li>
-                                        
-                                    </ul>
+                                    <p>The first step in developing this project plan was to created a <a href="https://docs.google.com/document/d/1XjYtpyvb7k3f42m1r6v9jPqhabwjBeAXWreHOSxEYqc/edit?usp=sharing">Project Charter, </a><a href="https://docs.google.com/document/d/1ldPiiwXOA9FNptqeeMHxpGak-ocKHBc7/edit?usp=sharing&ouid=109563213652036995908&rtpof=true&sd=true">Requirements Management Plan, </a> <a href="https://docs.google.com/document/d/1du9k2d6yBVF8kCquT11ypdZKOTn98rMbP6SzZKayX6M/edit?usp=sharing">RACI Matrix, </a><a href="https://docs.google.com/document/d/1hY-GdIZ4IFLT7ItYjewYKVoyCtgEUgsk/edit?usp=sharing&ouid=109563213652036995908&rtpof=true&sd=true">Requirements Register, </a><a href="https://docs.google.com/document/d/1abQxcCKbOPDYyOSEcGggYR-mRbmKH15k/edit?usp=sharing&ouid=109563213652036995908&rtpof=true&sd=true">and an Agile Product Backlog, </a>  </p>
+                                    <p>The second step, focusing on communication and stakeholder management, included a <a href="https://drive.google.com/file/d/1TEbFPVa0AwRggCWhcS8xlLlUkqthUqgY/view?usp=sharing">Kickoff Meeting (Video), </a><a href="https://docs.google.com/document/d/1Z1Y477uYfH5-EUrkhJfbUzRhGVXoW9O6/edit?usp=sharing&ouid=109563213652036995908&rtpof=true&sd=true">Communications Management Plan, </a> <a href="https://docs.google.com/spreadsheets/d/1HXgCvuQuKR72Om_4MOAZw1EaGDxe0efVRbgdn-OyQME/edit?usp=sharing">Stakeholder Assessment Matrix, </a><a href="https://docs.google.com/document/d/1_6gZzz7MDauYhhapuCBabEevAU5SLBa2/edit?usp=sharing&ouid=109563213652036995908&rtpof=true&sd=true">Team Operational Guidelines, </a><a href="https://docs.google.com/presentation/d/1_c8miwIBf4ujSll0WhCnm_Po0P5nj86e/edit?usp=sharing&ouid=109563213652036995908&rtpof=true&sd=true">and a Leadership Statement, </a>  </p>
+                                    <p>The final step assumed completion of the Analaysis phase and focused on <a href="https://docs.google.com/spreadsheets/d/10gO3XF8QxUYDXd8W7taZLVmQUUax3rqkbCAJGzlyJqA/edit?usp=sharing">Earned Value Calculations </a> and a <a href="https://docs.google.com/document/d/12eDZ1ZnLEUF_Lq7WAUzODWAvZSZCrK4feO_Z78sokkA/edit?usp=sharing">Project Status Update (agenda) </a> and <a href="https://drive.google.com/file/d/16JLrXke56OnXEinksalQTIxbXbNfOyGx/view?usp=sharing"> (presentation), </a><a href="https://docs.google.com/spreadsheets/d/1nk0-FhQ09zNDe69yQh9vIvgUaLrXqbGV-O_4yytkb8M/edit?usp=sharing">Summary Assessment </a> and the <a href="https://docs.google.com/document/d/1NR4JXSZGm3j4QWK501OecwwJsbU7ymRG/edit?usp=sharing&ouid=109563213652036995908&rtpof=true&sd=true">Complete Project Management Plan, </a>  </p>
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
-                                        Close Project
+                                        Close Window
                                     </button>
                                 </div>
                             </div>
