added 'education' to CV portion and fixed e-mail link

--- a/cv.html
+++ b/cv.html
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5"> 
                         +1 (718) 401 2001 · 
-                        <a href="mailto:jenny.thinkful@example.com">justindaledep@gmail.com</a> ·
+                        <a href="mailto:justindaledep@gmail.com">justindaledep@gmail.com</a> ·
                         San Diego, CA
                     </div>
                     <div class="cv-social-icons">
@@ -53,7 +53,7 @@
                         <a class="cv-social-icon" href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                     <br>
-                    <p class="lead mb-5">Experienced Director Of Business Development and Project Manager with a demonstrated history of working in the International Education industry. Skilled in Project Management, Team Building, Public Speaking, Leadership, Operations and Sales and Marketing. Strong business development professional with a passion for building strong relationships with partners and stakeholders to deliver excellence and superior outcomes.</p>
+                    <p class="lead mb-5">Experienced Director Of Business Development and Project Manager with a demonstrated history of working in the International Education industry. Skilled in Project Management, Team Building, Public Speaking, Leadership,Education, Operations and Sales and Marketing. Strong business development professional with a passion for building strong relationships with partners and stakeholders to deliver excellence and superior outcomes.</p>
 
                 </div>
             </section>
